# iot-auto-sanity

./: README  README.d  auto-sanity.py  example-fire-plan  example-test-runner-imx8fire  fire-plan  passwd  pyproject.toml  test-runner-imx8fire  test-runner-imx8gnp2wire  testscript  tox.ini  tplan
.github/: CODEOWNERS
.github/workflows/: tox.yml
sanity/: agent_entry.py
sanity/agent/: __init__.py  agent.py  checkbox.py  cmd.py  console.py  data.py  deploy.py  err.py  iso.py  mail.py  net.py  pdu.py  scheduler.py  ssh.py  style.py  typecmux.py
sanity/launcher/: parser.py
tests/: austin-se30.yaml  test_launcher.py  x8_high_MED.yaml
x86-tools/: user-data.sh
